add transaction query and update block object
