# src/models/models.ts
@@ -1,2 +1,5 @@
 export * from './block';
+export * from './transaction';
+
 export * from './blockResponseModel';
+export * from './transactionResponseModel';
