# src/models/transaction.ts
@@ -1,0 +1,15 @@
+export interface Transaction {
+  blockHash: number;
+  from: string;
+  gas: number;
+  gasPrice: string;
+  hash: string;
+  input: string;
+  nonce: number;
+  r: string;
+  s: string;
+  to: string;
+  transactionIndex: number;
+  v: string;
+  value: string;
+}
