# src/models/transactionResponseModel.ts
@@ -1,0 +1,27 @@
+/**
+ * BSCScan API
+ * Description in [BSCScan API](https://github.com/quanttb/bscscan-api).
+ *
+ * OpenAPI spec version: 0.0.1
+ * Contact: tranthienbaoquan@gmail.com
+ *
+ * NOTE: This class is auto generated by the swagger code generator program.
+ * https://github.com/swagger-api/swagger-codegen.git
+ * Do not edit the class manually.
+ */
+
+export interface TransactionResponseModel { 
+    blockHash: number;
+    from: string;
+    gas: number;
+    gasPrice: string;
+    hash: string;
+    input: string;
+    nonce: number;
+    r: string;
+    s: string;
+    to: string;
+    transactionIndex: number;
+    v: string;
+    value: string;
+}
